--- a/src/sa_web/static/scss/_sidebar.scss
+++ b/src/sa_web/static/scss/_sidebar.scss
@@ -47,8 +47,8 @@
         box-sizing: border-box;
         .sidebar-close {
             z-index: 1;
-            i {
-                margin-right: 30px;
+            i.fa {
+                margin-right: 10px;
                 background: #0074d9;
                 border-radius: 50%;
                 padding: 6px 10px 5px 6px;
@@ -66,3 +66,110 @@
 //font-family: 'Dancing Script', cursive;
 //text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
 //}
+
+/*---- jquery-accordion overrides ----*/
+
+[data-control],
+[data-content] > * {
+    border-bottom: none;
+
+}
+[data-content] > * {
+    padding: initial;
+}
+
+[data-content] input[type=checkbox] {
+    display: none;
+}
+[data-content] .layer-type-li {
+    padding-left: 10px;
+}
+[data-content] label {
+    display: block;
+    padding: 6px 0;
+    margin: 0px auto;
+    background: #ddd;
+    padding-left: 30px;
+    font-size: 14px;
+}
+[data-content] label:hover {
+    color: #fff;
+}
+[data-content] li:last-child {
+    padding-bottom: 0;
+}
+[data-content] li:first-child {
+    padding-top: 1px;
+}
+[data-content] input:checked + label:before {
+    content: "\2713";
+    padding-right: 5px;
+    color: #fff;
+    position: absolute;
+    left: 8px;
+}
+[data-content] input:checked + label{
+    background: rgb(0, 127, 191);
+    color: #fff;
+}
+[data-accordion] [data-control] {
+    background: rgba(242, 100, 47, 1);
+    color: #fff;
+    text-transform: uppercase;
+    padding-left: 34px;
+}
+
+[data-accordion] > [data-control]:after {
+    content: "\f196";
+    top: 8px;
+    color: #fff;
+    font-size: 22px;
+    font-family: "fontawesome";
+    background: none;
+}
+[data-accordion].open > [data-control]:after {
+    content: "\f147";
+}
+[data-accordion].open > [data-control]:after {
+    -webkit-transform: initial;
+    -ms-transform: initial;
+    transform: initial;
+}
+/* .squaredFour */
+.layer-type-select {
+    position: absolute;
+    z-index: 98;
+
+    label {
+        width: 34px;
+        height: 34px;
+        cursor: pointer;
+        position: absolute;
+        top: 0;
+        left: 0;
+        &:after {
+            content: "";
+            font-family: "fontawesome";
+            top: 8px;
+            left: 8px;
+            position: absolute;
+            font-size: 12px;
+            padding: 3px 1px 1px 3px;
+            width: 13px;
+            height: 13px;
+            border-radius: 4px;
+            background: #fcfff4;
+        }
+        &:hover::after {
+            color: #007fbf;
+        }
+    }
+
+    input[type=checkbox] {
+        visibility: hidden;
+        &:checked + label:after {
+            content: "\f00c";
+        }
+    }
+}
+/* end .squaredFour */
