Add ESRI FeatureLayer support

--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -205,6 +205,7 @@
   <!-- https://github.com/openplans/handlebars-helpers -->
   <script src="{{STATIC_URL}}libs/handlebars-helpers.js"></script>
   <script src="{{STATIC_URL}}libs/leaflet.argo.js"></script>
+  <script src="{{STATIC_URL}}libs/esri-leaflet.js"></script>
   <script src="{{STATIC_URL}}libs/leaflet.sidebar.js"></script>
   {% else %}
   <!--   TODO: build libraries with npm instead of bower -->
