new greenways marker and config updates

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1056,7 +1056,7 @@ select {
 }
 
 #site-header {
-  background: url(images/lightpaperfibers.png);
+  background: url(images/greenways-logo.png);
   position: relative;
   z-index: 99;
   padding: 0.5em;
@@ -1089,7 +1089,7 @@ select {
 }
 
 #nav-btn {
-  background: url(images/lightpaperfibers.png);
+  background: url(images/greenways-logo.png);
   color: #bbb;
   font-size: 2em;
   line-height: 1;
