--- a/src/sa_web/static/scss/_header.scss
+++ b/src/sa_web/static/scss/_header.scss
@@ -3,7 +3,7 @@
 // ################################
 
 #site-header {
-    background: url(images/lightpaperfibers.png);
+    background: url(images/greenways-logo.png);
     position: relative;
     z-index: 99;
     padding: 0.5em;
@@ -41,7 +41,7 @@
 // Navigation Button - Selectors
 
 #nav-btn {
-    background: url(images/lightpaperfibers.png);
+    background: url(images/greenways-logo.png);
     color: #bbb;
     font-size: 2em;
     line-height: 1;
