--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1087,7 +1087,6 @@ select {
 }
 
 #site-header {
-  background: url(images/greenways-logo.png);
   position: relative;
   z-index: 99;
   padding: 0.5em;
@@ -1120,7 +1119,6 @@ select {
 }
 
 #nav-btn {
-  background: url(images/greenways-logo.png);
   color: #bbb;
   font-size: 2em;
   line-height: 1;
@@ -1588,6 +1586,24 @@ a.close-btn span {
   text-decoration: none;
 }
 
+.place-items .place-item {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.place-items ul {
+  margin: 0;
+}
+.place-items .place-label {
+  font-weight: bold;
+}
+.place-items .place-value {
+  color: #777777;
+  word-break: break-all;
+}
+.place-items .multi-select-response {
+  padding: 0;
+}
+
 .place-submission-details {
   display: block;
   padding-left: 3.75em;
@@ -1756,6 +1772,30 @@ a.auth-inline {
   padding-right: 10px;
   font-family: "Roboto", sans-serif;
   margin-bottom: 0;
+}
+
+/* place form geolocation and instructions bar */
+.drag-marker-instructions {
+  position: relative;
+  background-color: lightyellow;
+}
+.drag-marker-instructions .btn-geolocate {
+  font-size: 0.85em;
+  width: 140px;
+  padding: 5px;
+  position: relative;
+}
+.drag-marker-instructions .btn-geolocate img {
+  position: absolute;
+  left: 2px;
+  top: 6px;
+}
+.drag-marker-instructions .drag-text {
+  margin-bottom: 0;
+  padding-left: 15px;
+}
+.drag-marker-instructions #geolocating-msg {
+  color: #888888;
 }
 
 #side-bar {
