--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1766,6 +1766,9 @@ a.auth-inline {
   font-family: FontAwesome;
   overflow: hidden;
 }
+.place-story-bar h1 {
+  line-height: 1em;
+}
 .place-story-bar .story-tagline {
   width: 100%;
   padding-left: 10px;
