Replace break-all with break-word in place detail views
This prevents text in place detail views from breaking without
the use of hyphens.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1600,7 +1600,7 @@ a.close-btn span {
 }
 .place-items .place-value {
   color: #777777;
-  word-break: break-all;
+  word-break: break-word;
 }
 .place-items .multi-select-response {
   padding: 0;
