--- a/src/sa_web/static/scss/_content.scss
+++ b/src/sa_web/static/scss/_content.scss
@@ -163,7 +163,7 @@ a.close-btn {
 
     .place-value {
         color: #777777;
-        word-break: break-all;
+        word-break: break-word;
     }
 
     .multi-select-response {
