--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -822,6 +822,25 @@ img {
   font-size: 0.75em;
 }
 
+/* colorpicker buttons */
+button.sp-selected {
+  background-image: -webkit-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -moz-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -ms-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -o-linear-gradient(top, #888888, #CCCCCC);
+}
+button.sp-selected:hover {
+  background-image: -webkit-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -moz-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -ms-linear-gradient(top, #888888, #CCCCCC);
+  background-image: -o-linear-gradient(top, #888888, #CCCCCC);
+}
+
+.sp-picker-container button {
+  margin-bottom: 5px;
+  margin-right: 5px;
+}
+
 .big-btn {
   position: absolute;
   bottom: 0;
@@ -1145,7 +1164,7 @@ select {
   max-width: 60%;
   margin-bottom: 10px;
   font-size: 1.5em;
-  font-weight: bold;
+  font-weight: 'bf1fb';
 }
 
 #site-header {
@@ -1457,6 +1476,20 @@ a.logout-btn {
   background-color: rgba(242, 206, 206, 0.8);
 }
 
+.no-geometry-warning {
+  background-color: LightYellow;
+  background-color: rgba(240, 240, 0, 0.2);
+  color: #444;
+  font-weight: bold;
+  text-shadow: -1px 1px 0 rgba(255, 255, 255, 0.5);
+  text-align: center;
+  margin-bottom: 1em;
+  padding: 0.75em 1em 0.875em;
+  border-radius: 0.325em;
+  background-color: LightPink;
+  background-color: rgba(242, 206, 206, 0.8);
+}
+
 #ajax-error-msg {
   display: none;
   position: absolute;
@@ -1537,6 +1570,63 @@ a.logout-btn {
 
 .leaflet-control-attribution {
   display: none;
+}
+
+/* leaflet drawing toolbar */
+.leaflet-draw-edit-edit {
+  background-position: -147px 1px !important;
+}
+
+.leaflet-draw-edit-remove {
+  background-position: -178px 1px !important;
+}
+
+.leaflet-draw-draw-polyline {
+  background-position: 2px 1px !important;
+}
+
+.leaflet-draw-draw-polygon {
+  background-position: -28px 1px !important;
+}
+
+.leaflet-draw-draw-rectangle {
+  background-position: -59px 1px !important;
+}
+
+/* Geometry editor colorpicker */
+.sp-container {
+  position: absolute !important;
+  top: -146px;
+  left: -205px;
+  background-color: white;
+  pointer-events: all;
+}
+
+.leaflet-control-colorpicker-interior {
+  font-family: FontAwesome;
+  width: 33px;
+  height: 33px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  display: block;
+  border-radius: 4px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  box-shadow: 0 1px 7px rgba(0, 0, 0, 0.65);
+  cursor: pointer;
+  text-align: center;
+  background-color: #FFFFFF;
+}
+
+.leaflet-control-colorpicker-interior:before {
+  content: '\f1fb';
+  position: absolute;
+  right: 10px;
+  top: 7px;
+}
+
+.leaflet-control-colorpicker-interior:hover {
+  background-color: #f4f4f4;
 }
 
 #content {
