--- a/src/sa_web/static/scss/_forms.scss
+++ b/src/sa_web/static/scss/_forms.scss
@@ -148,5 +148,4 @@ select {
     max-width: 60%;
     margin-bottom: 10px;
     font-size: 1.5em;
-    font-weight: bold;
-}
+    font-weight:'bf1fb'}
