improve styling for editor mode title bar

--- a/src/sa_web/static/scss/_forms.scss
+++ b/src/sa_web/static/scss/_forms.scss
@@ -122,3 +122,11 @@ select {
 .alt-label {
     display: none;
 }
+
+/* Editor mode update form */
+#update-place-model-title-form .place-value-title {
+    max-width: 60%;
+    margin-bottom: 10px;
+    font-size: 1.5em;
+    font-weight: bold;
+}
