--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1120,6 +1120,14 @@ select {
   display: none;
 }
 
+/* Editor mode update form */
+#update-place-model-title-form .place-value-title {
+  max-width: 60%;
+  margin-bottom: 10px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
 #site-header {
   position: relative;
   z-index: 99;
