update story bar control styles

--- a/src/sa_web/static/scss/_content.scss
+++ b/src/sa_web/static/scss/_content.scss
@@ -336,7 +336,7 @@ a.auth-inline {
 
 /* place detail view story bar */
 .place-story-bar {
-    background-color: LightYellow;
+    background-color: #EEEEEE;
     padding: 8px;
     border-radius: 3px;
     margin-top: 10px;
