--- a/src/sa_web/static/scss/_buttons.scss
+++ b/src/sa_web/static/scss/_buttons.scss
@@ -285,7 +285,7 @@
 .btn-previous-story-nav {
     vertical-align: top;
     width: 10%;
-    color: $button-background-hover-blue;
+    color: $button-background-red;
     cursor: pointer;
     &:before {
         font-size: 3.3em;
@@ -293,14 +293,14 @@
     }
 
     &:hover {
-        color: $button-background-blue;
+        color: $button-background-hover-red;
     }
 }
   
 .btn-next-story-nav {
     vertical-align: top;
     width: 10%;
-    color: $button-background-hover-blue;
+    color: $button-background-red;
     cursor: pointer;
     &:before {
         font-size: 3.3em;
@@ -308,7 +308,7 @@
     }
 
     &:hover {
-        color: $button-background-blue;
+        color: $button-background-hover-red;
     }
 }
 
