--- a/src/sa_web/static/scss/_variables.scss
+++ b/src/sa_web/static/scss/_variables.scss
@@ -13,6 +13,8 @@ $border-color-lightgrey: #eeeeee;
 $button-background-blue: #007fbf;
 $button-background-hover-blue: #93b7c9;
 $button-background-lightblue: #a3c7d9;
+$button-background-red: rgba(255, 0, 0, 0.43);
+$button-background-hover-red: rgba(255, 0, 0, 0.65);
 $button-color-white: #fff;
 $button-primary-background-orange: rgba(242, 82, 24, 0.89);
 $opacity-lowest-black: rgba(0, 0, 0, 0.05);
