--- a/src/sa_web/static/scss/_forms.scss
+++ b/src/sa_web/static/scss/_forms.scss
@@ -125,6 +125,7 @@ select {
 
 /* Editor mode update form */
 #update-place-model-title-form .place-value-title {
+    border-width: 4px;
     max-width: 60%;
     margin-bottom: 10px;
     font-size: 1.5em;
