--- a/src/sa_web/static/scss/_counter.scss
+++ b/src/sa_web/static/scss/_counter.scss
@@ -34,14 +34,14 @@
 
 .meter-bar meter {
     width: 260px;
-    height: 10px;
-    -webkit-appearance: none;
-
-    // Reset appearance
     border: 1px solid #ccc;
     border-radius: 3px;
     display: inline-block;
     *display: inline;
     *zoom: 1;
     padding: 0.1em 0.1em;
+}
+
+.meter-bar meter::-webkit-meter-bar {
+    border: 1px solid #ccc;
 }
