--- a/src/sa_web/static/scss/_forms.scss
+++ b/src/sa_web/static/scss/_forms.scss
@@ -123,6 +123,21 @@ select {
     display: none;
 }
 
+/* QuillJS editor styles */
+.rawHTML {
+    margin-top: 0px !important;
+    height: 200px;
+    border-bottom: 0.35em solid #a3c7d9 !important;
+    border-left: 0.35em solid #a3c7d9 !important;
+    border-right: 0.35em solid #a3c7d9 !important;
+}
+
+.ql-toolbar.ql-snow {
+    border-top: 0.30em solid #a3c7d9 !important;
+    border-left: 0.30em solid #a3c7d9 !important;
+    border-right: 0.30em solid #a3c7d9 !important;   
+}
+
 /* Editor mode update form */
 #update-place-model-title-form .place-value-title {
     border-width: 4px;
