--- a/src/flavors/pboakland/templates/index.html
+++ b/src/flavors/pboakland/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block site-title %}
 <a href="/">
-  <img id="site-title-image" src="{{STATIC_URL}}css/images/logo_cooc_min.png" alt="{{ config.app.name }}"></img>
+  <img id="site-title-image" src="{{STATIC_URL}}css/images/pblogo.png" alt="{{ config.app.name }}"></img>
 </a>
 {% endblock %}
 
