--- a/src/flavors/pboakland/static/css/custom.css
+++ b/src/flavors/pboakland/static/css/custom.css
@@ -39,6 +39,31 @@
 /* =Media Queries
 -------------------------------------------------------------- */
 
+@media only screen and (max-width: 60em) {
+    html, body, #map {
+        height: 100%;
+    }
+
+    #main {
+        // calculated as 100% of viewport height minus the fixed pixel height of the header
+        height: calc(100% - 64px);
+    }
+
+    #map-container {
+        // calculated as 100% of #main height minus the fixed pixel height of the footer
+        height: calc(100% - 72px);
+    }
+
+    .activity-enabled.content-visible #map-container {
+        height: 70%;
+    }
+
+    #site-title-image {
+      content: url("images/pblogo.png");
+    }
+}
+
+
 @media only screen and (min-width: 768px) {
 }
 
