add cookie-based dynamic form autocompletion

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1120,6 +1120,10 @@ select {
   display: none;
 }
 
+.isAutocomplete {
+  background-color: #ffffe0;
+}
+
 /* QuillJS editor styles */
 .rawHTML {
   margin-top: 0px !important;
