--- a/src/sa_web/static/scss/_forms.scss
+++ b/src/sa_web/static/scss/_forms.scss
@@ -123,6 +123,10 @@ select {
     display: none;
 }
 
+.isAutocomplete {
+    background-color: #ffffe0;
+}
+
 /* QuillJS editor styles */
 .rawHTML {
     margin-top: 0px !important;
