Add form autocompletion
Note that this commit replicates functionality implemented on the
formAutocompletion-534 branch (based off of develop), but tweaked
to work with pboakland's code, which is based off of master.

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1088,6 +1088,10 @@ select {
   display: none;
 }
 
+.isAutocomplete {
+  background-color: #ffffe0;
+}
+
 #site-header {
   position: relative;
   z-index: 99;
