--- a/src/flavors/pboakland/static/css/custom.css
+++ b/src/flavors/pboakland/static/css/custom.css
@@ -4,6 +4,31 @@
  * NOTE: "With great power comes great responsibility."
  */
 
+label {
+  font-size: 1.15em;
+  margin-right: 0.5em;
+  padding-bottom: 0;
+}
+
+.category-btn + label > span {
+  width: 296px;
+  position: absolute;
+  top: 0px;
+  left: 38px;
+  padding-left: 15px;
+  border-top: 2px solid transparent;
+  border-bottom: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-radius: 0 4px 4px 0;
+  padding-top: 11px;
+  padding-bottom: 11px;
+}
+
+.btn-primary:visited, .btn-primary:link {
+  background-color: #FFBE00;
+  color: #FFBE00;
+  background-color: rgba(0, 72, 58, 0.9);
+}
 
 /* =Header
 -------------------------------------------------------------- */
@@ -30,11 +55,6 @@
   margin-top: 5px;
 }
 
-.btn-primary:visited, .btn-primary:link {
-  background-color: #00aaff;
-  color: #fff;
-  background-color: rgba(32, 213, 213, 0.9);
-}
 
 
 
