--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -46,7 +46,7 @@
   <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.datetimepicker.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}css/spectrum.css">
   <!-- QuillJS -->
-  <link rel="stylesheet" href="https://cdn.quilljs.com/1.1.4/quill.snow.css">
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/quill.snow.css">
 
   <link rel="stylesheet" href="{{ STATIC_URL }}css/default.css?deployed_at={{ settings.LAST_DEPLOY_DATE|urlencode:'' }}">
   {% else %}
