--- a/src/sa_web/static/scss/_sidebar.scss
+++ b/src/sa_web/static/scss/_sidebar.scss
@@ -55,3 +55,15 @@
 //font-family: 'Dancing Script', cursive;
 //text-shadow: 1px -1px 1px rgba(0,0,0,0.5);
 //}
+
+.right-sidebar-visible #right-sidebar {
+    position: absolute;
+    right: 0;
+    width: $sidebar-width;
+    max-height: 100%;
+    overflow: auto;
+    box-shadow: (-0.325em) 0 0 $opacity-very-low-black;
+    z-index: 10;
+    
+}
+
