--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -281,11 +281,7 @@
     }
   </script>
 
-  {% if settings.DEBUG %}
-  <script src="{{STATIC_URL}}dist/test-bundle.js"></script>
-  {% else %}
-  <script src="{{STATIC_URL}}dist/bundle.js?ver=0.7.0"></script>
-  {% endif %}
+  <script src="{{STATIC_URL}}dist/bundle.js"></script>
 
   <script src="{{API_ROOT}}users/current?format=jsonp&callback=bootstrapCurrentUser"></script>
   <script src="{{API_ROOT}}utils/session-key?format=jsonp&callback=setApiSessionCookie"></script>
