--- a/src/sa_web/static/scss/_variables.scss
+++ b/src/sa_web/static/scss/_variables.scss
@@ -2,7 +2,8 @@
 // BASE STYLES - VARIABLES
 // ################################
 // Links - Variables
-$hover-highlight-blue: #00aaff;
+$default-link-color: #00aaff;
+$hover-highlight-blue: #36454f;
 
 // Typography - Variables
 $default-font-color: #36454f;
