--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -883,70 +883,61 @@ img {
 .category-btn {
   display: none;
 }
-.category-btn + label {
-  top: 0px;
-  text-transform: uppercase;
-  font-size: 12pt;
-  width: 200px;
-  display: block;
-  position: relative;
-  opacity: 1;
-  height: 46px;
-  margin-bottom: 1px;
+
+.category-btn-container {
+  width: 100%;
+  margin-bottom: 4px;
+  border-collapse: separate;
+  border-spacing: 0;
 }
-.category-btn + label > img {
-  height: 36px;
-  width: 30px;
+.category-btn-container img {
+  width: 36px;
+  padding-top: 4px;
+  padding-left: 2px;
+}
+.category-btn-container .category-icon {
+  cursor: pointer;
+  width: 40px;
   border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
   border-left: 2px solid transparent;
-  border-radius: 4px 0 0 4px;
-  padding: 3px;
-  display: inline;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
-.category-btn + label > span {
-  width: 210px;
-  position: absolute;
-  top: 0px;
-  left: 38px;
-  padding-left: 15px;
+.category-btn-container .category-label {
+  cursor: pointer;
+  padding-left: 10px;
   border-top: 2px solid transparent;
   border-bottom: 2px solid transparent;
   border-right: 2px solid transparent;
-  border-radius: 0 4px 4px 0;
-  padding-top: 11px;
-  padding-bottom: 11px;
-}
-.category-btn:checked + label, .category-btn:hover + label {
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  text-transform: uppercase;
+  font-size: 1.2em;
   opacity: 1;
-  cursor: pointer;
 }
-.category-btn:checked + label > img, .category-btn:hover + label > img {
+.category-btn-container:hover .category-icon {
   border-color: #f25218;
 }
-.category-btn:checked + label > span, .category-btn:hover + label > span {
+.category-btn-container:hover .category-label {
   background-color: #f25218;
+  border-color: #f25218;
   color: white;
 }
 
 /* Selected category placeholder styles */
-#selected-category {
-  position: relative;
-  width: 280px;
-  margin-right: 0;
+#selected-category .category-icon, .category-btn-container-selected .category-icon {
+  border-color: #f25218;
 }
-#selected-category label {
-  cursor: default !important;
+#selected-category .category-label, .category-btn-container-selected .category-label {
+  background-color: #f25218;
+  border-color: #f25218;
+  color: white;
 }
 
 /* Other dynamic form styles */
 .category-menu-hamburger {
-  width: 30px;
-  height: 36px;
-  margin-right: 10px;
-  position: absolute;
-  top: 5px;
-  left: 290px;
+  padding-left: 20px;
 }
 .category-menu-hamburger:before {
   font-family: FontAwesome;
