working on #content

--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1969,6 +1969,7 @@ ul.recent-points {
   vertical-align: middle;
   margin-right: 8px;
   font-size: 1.33em;
+  /*font-size: 5px;*/
   letter-spacing: 1px;
 }
 
@@ -1996,6 +1997,7 @@ ul.recent-points {
   text-decoration: none;
   text-transform: none;
   font-family: "Roboto", sans-serif;
+  /*font-size: 5px;*/
 }
 
 .master-layer-list {
@@ -2155,6 +2157,7 @@ ul.recent-points {
   margin: 1em 0;
   float: left;
 }
+
 
 #place-counter .counter-meter {
   width: auto;
@@ -2918,7 +2921,7 @@ a.close-unsupported-overlay {
   }
 
   .sidebar-header .sidebar-close i {
-    padding: 5px 8px 6px 8px;
+    /*padding: 5px 8px 6px 8px;*/
   }
 
   .sidebar-header .sidebar-close i::before {
