--- a/src/sa_web/static/scss/_content.scss
+++ b/src/sa_web/static/scss/_content.scss
@@ -368,6 +368,7 @@ a.auth-inline {
     .drag-text {
         margin-bottom: 0;
         padding-left: 15px;
+        font-size: 1.45em;
     }
     #geolocating-msg {
         color: #888888;
