Add pboakland admin-only form fields
- All changes contained in pboakland flavor files

--- a/src/flavors/pboakland/static/css/custom.css
+++ b/src/flavors/pboakland/static/css/custom.css
@@ -171,3 +171,10 @@ label {
     }
 
 }
+
+/* admin-only form fields */
+.is-admin-field {
+    background-color: rgba(250, 128, 114, 0.48);
+    padding: 5px;
+    border-radius: 4px;
+}
