show start pages at full screen height on devices with widths below 60em

--- a/src/base/static/scss/_media.scss
+++ b/src/base/static/scss/_media.scss
@@ -82,6 +82,10 @@
         height: 70%;
     }
 
+    .content-visible.start-page-visible #map-container {
+        height: 5%;
+    }
+
     .right-sidebar-visible #right-sidebar {
         width: 100%;
         display: block;
