--- a/src/base/static/scss/_media.scss
+++ b/src/base/static/scss/_media.scss
@@ -346,8 +346,7 @@
         position: absolute;
         top: 4em;
 
-        // height of site-header
-        bottom: 1.75em;
+        bottom: 0;
 
         //left: 40%;
         overflow: visible;
