--- a/src/base/static/scss/_content.scss
+++ b/src/base/static/scss/_content.scss
@@ -43,6 +43,52 @@ a.close-btn {
     }
 }
 
+a.maximize-btn, a.minimize-btn {
+    background: #fff;
+    color: #ff5e99;
+    font-size: 1.25em;
+    font-weight: bold;
+    text-decoration: none;
+    line-height: 1.125em;
+    display: block;
+    position: absolute;
+    top: -1.325em;
+    right: 0.5em;
+    padding: 0.325em 0.625em;
+    z-index: 2;
+    box-shadow: 0 -0.325em 0 rgba(0, 0, 0, 0.1);
+    border-radius: 0.325em 0.325em 0 0;
+
+    &:hover {
+        color: #cd2c67;
+    }
+
+    span {
+        font-size: 0.625em;
+        text-transform: uppercase;
+        margin-left: 0.625em;
+        position: relative;
+        top: -0.2em;
+    }
+}
+
+a.maximize-btn:after {
+    font-size: 1.0em;
+    font-family: FontAwesome;
+    content: "\f106";
+    padding-left: 7px;
+}
+
+a.minimize-btn {
+    display: none;
+    &:after {
+        font-size: 1.0em;
+        font-family: FontAwesome;
+        content: "\f107";
+        padding-left: 7px;
+    }
+}
+
 // Contains embeded video player size
 
 #content {
@@ -340,11 +386,13 @@ a.auth-inline {
     overflow: hidden;
     h1 {
         line-height: 1em;
+        font-size: 1.35em;
+        text-align: center;
     }
     .story-tagline {
         width: 100%;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 5px;
+        padding-right: 5px;
         font-family: $default-font-family;
         margin-bottom: 0;
     }
