--- a/src/base/static/scss/_map.scss
+++ b/src/base/static/scss/_map.scss
@@ -162,6 +162,19 @@
     }
 }
 
+// map spotlight effect
+
+#spotlight-mask {
+    display: none;
+    position: absolute;
+    left: calc(50% - 100px);
+    top: calc(50% - 100px);
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    box-shadow: 0px 0px 0px 800px rgba(0,0,0,0.4), inset 0px 0px 20px 30px rgba(0,0,0,0.4);
+}
+
 // Drag Marker Instructions (for adding a new place) - Selectors
 
 .drag-marker-instructions {
