add rich text editor as separate backbone view

--- a/src/base/templates/base.html
+++ b/src/base/templates/base.html
@@ -291,6 +291,7 @@
   <script src="{{STATIC_URL}}js/views/sidebar-view.js"></script>
   <script src="{{STATIC_URL}}js/views/legend-view.js"></script>
   <script src="{{STATIC_URL}}js/views/gis-legend-view.js"></script>
+  <script src="{{STATIC_URL}}js/views/rich-text-editor-view.js"></script>
   <script src="{{STATIC_URL}}js/routes.js"></script>
   {% else %}
   <script src="{{STATIC_URL}}dist/bundle.js?ver=0.7.0"></script>
