update styles for editor mode

--- a/src/base/static/scss/_content.scss
+++ b/src/base/static/scss/_content.scss
@@ -208,7 +208,8 @@ a.minimize-btn {
 }
 
 .place-item {
-    margin-bottom: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 
 .place-items {
