--- a/src/base/static/scss/_forms.scss
+++ b/src/base/static/scss/_forms.scss
@@ -138,17 +138,16 @@ select {
     line-height: 1.2em;
 } 
 
-
-/* QuillJS editor styles */
-.rawHTML {
+/* QuillJS rich text editor styles */
+.rich-text-field {
+    min-height: 200px;
     margin-top: 0px !important;
-    height: 200px;
     border-bottom: 0.35em solid #a3c7d9 !important;
     border-left: 0.35em solid #a3c7d9 !important;
     border-right: 0.35em solid #a3c7d9 !important;
 }
 
-.ql-toolbar.ql-snow {
+.ql-toolbar {
     border-top: 0.30em solid #a3c7d9 !important;
     border-left: 0.30em solid #a3c7d9 !important;
     border-right: 0.30em solid #a3c7d9 !important;   
